--- a/Delivery man app/assets/language/ar.json
+++ b/Delivery man app/assets/language/ar.json
@@ -37,7 +37,7 @@
   "todays_orders": "طلبات اليوم",
   "this_week_orders": "طلبيات هذا الاسبوع",
   "total_orders": "إجمالي الطلبات",
-  "cash_in_your_hand": "النقدية في يدك",
+  "cash_in_your_hand": "المال في يدك",
   "cash_on_delivery": "الدفع عند الاستلام",
   "digital_payment": "الدفع الرقمي",
   "paid": "مدفوع",
@@ -98,7 +98,7 @@
   "order_successfully_delivered": "تم تسليم الطلب بنجاح",
   "you_have_earned": "لقد كسبت",
   "back_to_home": "العودة إلى المنزل",
-  "no_order_request_available": "لا يوجد طلب أمر متاح",
+  "no_order_request_available": "لا يوجد أمر متاح",
   "km": "كم",
   "prepaid": "الدفع المسبق",
   "no": "لا",
@@ -267,7 +267,7 @@
   "1_special_character": "1 شخصية خاصة",
   "by_login_i_agree_with_all_the": "عن طريق تسجيل الدخول أنا أتفق مع كل",
   "terms_conditions": "الشروط والأحكام",
-  "upload_profile_picture": "تحميل ملف التعريف\n الصورة",
+  "upload_profile_picture": "تحميل صورة الملف الشخصي",
   "delivery_instruction": "تعليمات التسليم",
   "unavailable_item_note": "ملاحظة العنصر غير متوفر",
   "cutlery": "أدوات المائدة",
@@ -335,11 +335,11 @@
   "over_flow_warning_message": "يبدو أن الحد الأقصى للاحتفاظ بالنقود سيتم تجاوزه قريبًا. يرجى دفع المبلغ المستحق وإلا سيتم تعليق حسابك إذا تم قبول المبلغ",
   "my_account": "حسابي",
   "payable_amount": "المبلغ المستحق",
-  "cash_adjustment": "التسوية النقدية",
-  "cash_adjustment_description": "لضبط رصيد النقد في الصندوق والمبلغ القابل للسحب، يرجى النقر فوق موافق لتأكيد التعديلات",
+  "cash_adjustment": "التسوية المالية",
+  "cash_adjustment_description": "لضبط رصيد المال في الصندوق والمبلغ القابل للسحب، يرجى النقر فوق موافق لتأكيد التعديلات",
   "adjust_payments": "ضبط المدفوعات",
   "pay_now": "ادفع الآن",
-  "cash_in_hand": "النقد في متناول اليد",
+  "cash_in_hand": "المال في اليد",
   "withdrawal_amount": "مبلغ السحب",
   "transaction_history": "تاريخ المعاملات",
   "paid_via": "المدفوعة عن طريق",
