--- a/Delivery man app/assets/language/ar.json
+++ b/Delivery man app/assets/language/ar.json
@@ -69,8 +69,8 @@
   "my_location": "موقعي",
   "min": "دقيقة",
   "earned_amount": "المبلغ المكتسب",
-  "cancel": "يلغي",
-  "accept": "يقبل",
+  "cancel": "إلغاء",
+  "accept": "قبول",
   "call_customer_for_confirmation": "اتصل بالعميل للتأكيد",
   "call": "يتصل",
   "are_you_sure_to_accept": "هل أنت متأكد من القبول؟",
@@ -87,8 +87,8 @@
   "you_want_to_confirm_this_delivery": "هل تريد تأكيد هذا التسليم؟",
   "current_order": "النظام الحالي",
   "completed_order": "الطلب المكتمل",
-  "item": "غرض",
-  "items": "أغراض",
+  "item": "العنصر",
+  "items": "العناصر",
   "store_details": "تفاصيل المتجر",
   "direction": "اتجاه",
   "customer_contact_details": "تفاصيل الاتصال بالعملاء",
@@ -117,9 +117,9 @@
   "order_details": "تفاصيل الطلب",
   "total_amount": "المبلغ الإجمالي",
   "collect_otp_from_customer": "جمع OTP من العميل",
-  "ignore": "يتجاهل",
+  "ignore": "تجاهل",
   "order_ignored": "تم تجاهل الطلب",
-  "confirm": "يتأكد",
+  "confirm": "تأكيد",
   "collect_money_from_customer": "جمع المال من العميل",
   "ok": "نعم",
   "since_joining": "منذ الانضمام",
@@ -144,12 +144,12 @@
   "are_you_sure_to_offline": "هل أنت متأكد أنك تريد عدم الاتصال بالإنترنت؟",
   "you_denied": "لقد رفضت إذن تحديد الموقع أو سمحت باستخدام المقدمة فقط. تحتاج إلى السماح بالإذن طوال الوقت لاستخدام هذه الخدمة.",
   "you_denied_forever": "لقد رفضت إذن تحديد الموقع إلى الأبد. تحتاج إلى السماح بالإذن لاستخدام هذه الخدمة.",
-  "cod": "سمك القد",
+  "cod": "الدفع عند الاستلام",
   "digitally_paid": "المدفوعة رقميا",
   "go": "يذهب",
   "store_location": "موقع المتجر",
   "customer_location": "موقع العميل",
-  "mins_ago": "قبل دقائق",
+  "mins_ago": "دقائق مضت",
   "order_history": "تاريخ الطلب",
   "order_is_preparing": "النظام يستعد",
   "order_is_ready_for_handover": "الطلب جاهز للتسليم",
@@ -222,7 +222,7 @@
   "identity_type": "نوع الهوية",
   "passport": "جواز سفر",
   "driving_license": "رخصة القيادة",
-  "nid": "نيد",
+  "nid": "هوية قومية",
   "identity_number": "رقم الهوية",
   "identity_images": "صور الهوية",
   "submit": "يُقدِّم",
@@ -238,7 +238,7 @@
   "delivery_man_type": "نوع رجل التسليم",
   "zone": "منطقة",
   "freelancer": "مستقل",
-  "salary_based": "على أساس الراتب",
+  "salary_based": "موظف",
   "user": "عميل",
   "search": "يبحث",
   "not_found": "لم يتم العثور عليه",
@@ -262,9 +262,9 @@
   "upload_identity_image": "تحميل صورة الهوية",
   "8_or_more_character": "8 أو أكثر من الشخصيات",
   "1_number": "1 رقم",
-  "1_upper_case": "1 حالة كبيرة",
-  "1_lower_case": "1 حالة صغيرة",
-  "1_special_character": "1 شخصية خاصة",
+  "1_upper_case": "حرف كبير",
+  "1_lower_case": "حرف صغير",
+  "1_special_character": "حرف خاص",
   "by_login_i_agree_with_all_the": "عن طريق تسجيل الدخول أنا أتفق مع كل",
   "terms_conditions": "الشروط والأحكام",
   "upload_profile_picture": "تحميل صورة الملف الشخصي",
@@ -288,7 +288,7 @@
   "discount": "تخفيض",
   "coupon_discount": "خصم القسيمة",
   "vat_tax": "ضريبة القيمة المضافة",
-  "delivery_man_tips": "نصائح عامل التوصيل",
+  "delivery_man_tips": "نصائح رجل التوصيل",
   "delivery_fee": "رسوم التوصيل",
   "paid_by_wallet": "تدفع عن طريق المحفظة",
   "due_amount": "المبلغ المستحق",
@@ -326,7 +326,7 @@
   "cancel_payment": "إلغاء الدفع",
   "pay_via_online": "الدفع عن طريق الانترنت",
   "faster_and_secure_way_to_pay_bill": "طريقة أسرع وآمنة لدفع الفاتورة",
-  "payment": "قسط",
+  "payment": "دفع",
   "your_payment_is_successfully_completed": "تم إتمام عملية الدفع بنجاح",
   "your_payment_is_not_done": "لم يتم الدفع الخاص بك",
   "okay": "تمام",
@@ -348,7 +348,7 @@
   "deliver_to": "تسليم إلى",
   "view_on_map": "عرض على الخريطة",
   "restaurant_is": "المطعم هو",
-  "km_away_from_you": "كيلومترا منك",
+  "km_away_from_you": "كم بعيدا عنك",
   "order_location": "موقع الطلب",
   "your_distance_from_restaurant": "المسافة الخاصة بك من المطعم",
   "from_customer_to_restaurant_distance": "المسافة من العميل إلى المطعم",
@@ -360,7 +360,7 @@
   "from_sender_to_receiver_distance": "المسافة من المرسل إلى المتلقي",
   "total_withdrawn": "إجمالي السحب",
   "payment_history": "تاريخ الدفع",
-  "wallet_provided_earning": "المحفظة المقدمة للكسب",
+  "wallet_provided_earning": "المحفظة المقدمة للربح",
   "wallet_provided_earning_history": "قدمت المحفظة تاريخ الكسب",
   "you_do_not_have_sufficient_balance_to_pay": "ليس لديك رصيد كافي للدفع",
   "want_to_collect_order_amount": "تريد جمع مبلغ الطلب",
